<resources>
    <string name="app_name">SchermateNaTour21</string>
    <string name="toolbar_title">NaTour21</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confermaPassword">conferma password</string>
    <string name="button">Button</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="emailAddress">Indirizzo Email</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="profilo">Profilo</string>
    <string name="Home">Home Page</string>
    <string name="Collezioni">Collezioni</string>
    <string name="aggiungi">Aggiungi itinerario</string>
    <string name="assistence">Assistenza</string>
    <string name="logout">Logout</string>
    <string name="Help">Come possiamo aiutarti? Contattaci via email</string>
    <string name="from">From</string>
    <string name="descrizione">Descrizione</string>
    <string name="object">Object</string>
    <string name="Conferma">Conferma</string>
    <string name="textHere">Text Here</string>
    <string name="collezioni">Collezioni</string>
    <string name="Salva">Salva</string>
    <string name="EliminaCollezione">Elimina collezione</string>
    <string name="Login">Login</string>
    <string name="passwordDimenticata">password dimenticata?</string>
    <string name="loginWithGoogle">Login WITH GOOGLE</string>
    <string name="loginWithFacebook">Login WITH facebook</string>
    <string name="nonHaiAccount">Non hai ancora un account?</string>
    <string name="Registrati">Registrati</string>
    <string name="emailNonValida">Email inserita non valida</string>
    <string name="passwordErrata">Password Errata</string>
    <string name="Avvia">Avvia</string>
    <string name="Stop">Stop</string>
    <string name="Annulla">Annulla</string>
    <string name="Pubblica">Pubblica</string>
    <string name="emailExample">example@gmail.com</string>
    <string name="NuovaCollezione">Nuova Collezione</string>
    <string name="inserisciFoto">Inserisci foto profilo</string>
    <string name="Galleria">Galleria</string>
    <string name="Camera">Camera</string>
    <string name="CiaoUtente">Ciao Utente</string>
    <string name="Username">Username</string>
    <string name="vuoiCancellareAccount">Vuoi cancellare l\' account?</string>
    <string name="cancellaAccount">cancella account</string>
    <string name="tracciatiPersonali">Tracciati personali</string>
    <string name="recuperaPassword"> Recupera password</string>
    <string name="insertEmail">Inserisci il tuo indirizzo email</string>
    <string name="invia">Invia</string>
    <string name="emailNonValidaOVuota">Campo email vuoto oppure non corretto</string>
    <string name="cerca">cerca</string>
    <string name="aggiungiPercorso">AGGIUNGI PERCORSO</string>
    <string name="regolePassword">ATTENZIONE: La password deve contenere almeno 6 caratteri (A-Z, a-z, 0-9 e caratteri speciali)</string>
    <string name="erroreNome">Inserire il nome</string>
    <string name="erroreCognome">Inserire il cognome</string>
    <string name="emailErrata">indirizzo email errato</string>
    <string name="errorePassword">Password errata</string>
    <string name="passwordNonCoincidono">Le password non coincidono</string>
    <string name="terminiServizi">Accetta termini e servizi</string>
    <string name="accettareTerminiServizi">Accettare termini e servizi per proseguire</string>
    <string name="avanti">Avanti</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nomeCollezione">Nome Collezione</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>