<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfiloActivity"
    android:background="@color/prova">

    <!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="58dp"-->
<!--        android:layout_marginStart="25dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:layout_marginEnd="2dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textViewCiaoUtente"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/avatar" />-->

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="17dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCognomeAcProfilo"
        app:layout_constraintVertical_bias="0.019" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAssistenza"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCameraAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/login"
        android:text="@string/Camera"
        android:textSize="16sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonScegliFotoAcProfilo"
        app:layout_constraintVertical_bias="0.012" />


    <Button
        android:id="@+id/buttonConfermaModificheAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/login"
        android:text="@string/Conferma"
        android:textSize="16sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFotoProfiloAcProfilo"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/buttonScegliFotoAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/login"
        android:text="@string/Galleria"
        android:textSize="16sp"
        app:cornerRadius="100dp"
        app:icon="@android:drawable/stat_sys_upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFotoProfiloAcProfilo"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/textViewAssistenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/CiaoUtente"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <ImageView
        android:id="@+id/imageViewFotoProfiloAcProfilo"
        android:layout_width="302dp"
        android:layout_height="137dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/Username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCameraAcProfilo"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="19dp"
        android:text="@string/nome"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/textViewCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/cognome"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/buttonLogOutAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_logout_24"
        app:iconGravity="textEnd"
        app:iconSize="40sp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <Button-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="117dp"-->
<!--        android:layout_marginEnd="117dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:backgroundTint="@color/forgotPW"-->
<!--        android:text="Torna alla home"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vuoiCancellareAccount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewCancellaAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/buttonLogOutAcProfilo"
        app:layout_constraintTop_toBottomOf="@+id/buttonTracciatiPersonaliAcProfilo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewCancellaAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/cancellaAccount"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTracciatiPersonaliAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="@color/forgotPW"
        android:text="@string/tracciatiPersonali"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.119" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="58dp"
        android:backgroundTint="@color/prova"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAssistenza"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewUsernameAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="30dp"
        android:text="@string/Username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/buttonCameraAcProfilo"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textViewNomeAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="19dp"
        android:text="@string/nome"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/textViewNome"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameAcProfilo"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textViewCognomeAcProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="15dp"
        android:text="@string/cognome"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewCognome"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeAcProfilo"
        app:layout_constraintVertical_bias="0.018" />

</androidx.constraintlayout.widget.ConstraintLayout>