<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prova"
    tools:context=".NuovaCollezioneActivity">


    <ImageButton
        android:id="@+id/backButtonAcRegistrazionePercorso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/prova"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNomeCollezioneAcNuovaCollezione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/nomeCollezione"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescrizioneCollezioneAcNuovaCollezione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonAcRegistrazionePercorso"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDescrizioneCollezioneAcNuovaCollezione"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/descrizione"
        android:inputType="text|textMultiLine|textCapSentences"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNuovoItinerario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNuovoItinerario"
        android:layout_width="123dp"
        android:layout_height="68dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/login"
        android:text="@string/Salva"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>