<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prova"
    tools:context=".RegistrazionePercorsoActivity">

    <ImageButton
        android:id="@+id/backButtonAcRegistrazionePercorso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/prova"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonAvviaCronometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/toolbarColor"
        android:text="@string/Avvia"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonAcRegistrazionePercorso"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/buttonStopCronometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAvviaCronometro"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintVertical_bias="0.023" />


    <Button
        android:id="@+id/buttonAnnullaCronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/Annulla"
        android:visibility="invisible"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cronometro"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/buttonPubblica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/toolbarColor"
        android:text="@string/Pubblica"
        android:visibility="invisible"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cronometro"
        app:layout_constraintVertical_bias="0.861" />

    <ImageView
        android:id="@+id/imageViewCronometro"
        android:layout_width="148dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStopCronometro"
        app:layout_constraintVertical_bias="0.14"
        tools:srcCompat="@drawable/ic_baseline_alarm_24" />

    <Chronometer
        android:id="@+id/Cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="time"
        android:minHeight="48dp"
        android:text="00"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCronometro"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>